--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     color: rgba(255, 255, 255, 0.85);
                     margin-left: 6px;
                   "
-                  >/ano</span
+                  >/mês</span
                 >
               </div>
               <div
