--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <a class="btn-primary btn-pulse" id="startWhats" href="#psicologos" role="button">Encontrar psicólogo
             agora</a>
           <a class="btn-secondary" href="https://api.whatsapp.com/send?phone=5561998548265" target="_blank"
-            style="background-color: transparent;border: 2px solid #0d5f66;">Divulgar meu perfil como psicólogo</a>
+            style="background-color: transparent;border: 2px solid #0d5f66;color: #0d5f66!important;">Divulgar meu perfil como psicólogo</a>
         </div>
         <div class="confidence-block animate-fade-in">
           <div class="confidence-title">
