feat: corrigindo css

--- a/index.html
+++ b/index.html
@@ -80,14 +80,13 @@
       <div class="hero-content">
         <h1 id="hero-title">Cuide da sua saúde mental sem sair de casa.</h1>
         <p>
-          Fale com psicólogos verificados e comece sua melhora hoje mesmo,
-          direto pelo WhatsApp.
+          Fale com psicólogos verificados. Coloque hoje mesmo sua saúde mental em primeiro lugar!.
         </p>
         <div class="actions">
           <a class="btn-primary btn-pulse" id="startWhats" href="#psicologos" role="button">Encontrar psicólogo
             agora</a>
           <a class="btn-secondary" href="https://api.whatsapp.com/send?phone=5561998548265" target="_blank"
-            style="background-color: transparent;border: 2px solid #0d5f66;color: #0d5f66!important;">Divulgar meu perfil como psicólogo</a>
+            style="background-color: transparent;border: 2px solid #0d5f66;color: #0d5f66!important;">Criar meu perfil de psicólogo</a>
         </div>
         <div class="confidence-block animate-fade-in">
           <div class="confidence-title">
