--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   margin-bottom: 8px;
                   font-weight: 600;
                 ">
-              Plano Mensal
+              Plano Gratuito
             </h3>
             <p style="
                   color: #64748b;
