--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     Terapia Online Acessível | Psicólogos pelo WhatsApp – Psi Telemedicina
   </title>
   <meta name="description" content="Inicie sua terapia online de forma rápida e acessível." />
+  <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="css/style.css" />
 
   <script>
@@ -43,7 +44,7 @@
   <header role="banner">
     <div class="container header-content">
       <div class="logo">
-        <div class="logo-icon">Ψ</div>
+        <img src="img/logo.png" alt="Psi Telemedicina Logo" style="height: 50px; width: auto;">
         <div class="logo-text"><strong>Psi Telemedicina</strong></div>
       </div>
       <nav aria-label="Principal" class="desktop-nav">
@@ -175,7 +176,7 @@
                   margin-bottom: 8px;
                   font-weight: 600;
                 ">
-              Plano Gratuito
+              Free (limitado)
             </h3>
             <p style="
                   color: #64748b;
@@ -218,8 +219,8 @@
                     flex-shrink: 0;
                   ">✓</span>
               <div>
-                <strong style="display: block; margin-bottom: 2px">Perfil verificado</strong>
-                <span style="font-size: 13px; color: #64748b">Aparece na listagem principal</span>
+                <strong style="display: block; margin-bottom: 2px">Perfil simples</strong>
+                <span style="font-size: 13px; color: #64748b"></span>
               </div>
             </div>
             <div class="feature-item" style="
@@ -236,8 +237,8 @@
                     flex-shrink: 0;
                   ">✓</span>
               <div>
-                <strong style="display: block; margin-bottom: 2px">Contato direto</strong>
-                <span style="font-size: 13px; color: #64748b">Pacientes falam direto com você</span>
+                <strong style="display: block; margin-bottom: 2px">Aparece menos</strong>
+                <span style="font-size: 13px; color: #64748b"></span>
               </div>
             </div>
             <div class="feature-item" style="
@@ -254,8 +255,8 @@
                     flex-shrink: 0;
                   ">❌</span>
               <div>
-                <strong style="display: block; margin-bottom: 2px">Exposição online</strong>
-                <span style="font-size: 13px; color: #64748b">Visibilidade no site e buscas</span>
+                <strong style="display: block; margin-bottom: 2px">Sem destaque</strong>
+                <span style="font-size: 13px; color: #64748b"></span>
               </div>
             </div>
             <div class="feature-item" style="
@@ -272,12 +273,12 @@
                     flex-shrink: 0;
                   ">❌</span>
               <div>
-                <strong style="display: block; margin-bottom: 2px">Suporte dedicado</strong>
-                <span style="font-size: 13px; color: #64748b">Atendimento via WhatsApp</span>
+                <strong style="display: block; margin-bottom: 2px">Sem métricas</strong>
+                <span style="font-size: 13px; color: #64748b"></span>
               </div>
             </div>
           </div>
-          <a href="https://wa.me/5561998548265?text=Olá!%20Quero%20contratar%20o%20Plano%20Mensal%20de%20R$%2029,90"
+          <a href="https://wa.me/5561998548265?text=Olá!%20Quero%20contratar%20o%20Plano%20Mensal%20de%20R$%2049,90"
             target="_blank" class="btn-primary" style="
                 width: 100%;
                 text-align: center;
@@ -352,7 +353,7 @@
                     color: white;
                     font-weight: 700;
                     line-height: 1;
-                  ">29</span>
+                  ">49</span>
               <span class="price-cents" style="font-size: 24px; color: white; font-weight: 600">,90</span>
               <span class="price-period" style="
                     font-size: 16px;
@@ -396,8 +397,8 @@
                     flex-shrink: 0;
                   ">⭐</span>
               <div>
-                <strong style="display: block; margin-bottom: 2px">Selo PREMIUM</strong>
-                <span style="font-size: 13px; color: rgba(255, 255, 255, 0.8)">Destaque visual no seu perfil</span>
+                <strong style="display: block; margin-bottom: 2px">Destaque no site</strong>
+                <span style="font-size: 13px; color: rgba(255, 255, 255, 0.8)"></span>
               </div>
             </div>
             <div class="feature-item" style="
@@ -414,8 +415,8 @@
                     flex-shrink: 0;
                   ">⭐</span>
               <div>
-                <strong style="display: block; margin-bottom: 2px">Posição prioritária</strong>
-                <span style="font-size: 13px; color: rgba(255, 255, 255, 0.8)">Apareça no topo da lista sempre</span>
+                <strong style="display: block; margin-bottom: 2px">Métricas de visualização</strong>
+                <span style="font-size: 13px; color: rgba(255, 255, 255, 0.8)"></span>
               </div>
             </div>
             <div class="feature-item" style="
@@ -432,8 +433,8 @@
                     flex-shrink: 0;
                   ">⭐</span>
               <div>
-                <strong style="display: block; margin-bottom: 2px">Suporte VIP</strong>
-                <span style="font-size: 13px; color: rgba(255, 255, 255, 0.8)">Atendimento prioritário e rápido</span>
+                <strong style="display: block; margin-bottom: 2px">Divulgação por trafego pago</strong>
+                <span style="font-size: 13px; color: rgba(255, 255, 255, 0.8)"></span>
               </div>
             </div>
             <div class="feature-item" style="
@@ -450,9 +451,8 @@
                     flex-shrink: 0;
                   ">⭐</span>
               <div>
-                <strong style="display: block; margin-bottom: 2px">Painel Dashboard</strong>
-                <span style="font-size: 13px; color: rgba(255, 255, 255, 0.8)">Gerencia pacientes e acompanhe a jornada
-                  terapeutica</span>
+                <strong style="display: block; margin-bottom: 2px">Prioridade em buscas</strong>
+                <span style="font-size: 13px; color: rgba(255, 255, 255, 0.8)"></span>
               </div>
             </div>
           </div>
@@ -616,7 +616,7 @@
     <footer class="container" role="contentinfo">
       <div style="text-align: center; margin: 0 auto;">
         <div class="logo-icon" style="width: 48px; height: 48px; margin: 0 auto">
-          Ψ
+          <img src="img/logo.png" alt="Psi Telemedicina Logo" style="height: 100%; width: auto; object-fit: contain;">
         </div>
         <div class="small">© <span id="year"></span> Psi Telemedicina</div>
       </div>
